--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,10 @@
 .footer {
-  padding: 79px 10px 37px;
-  margin: 0 auto;
-  max-width: 1140px;
-  text-align: center;
-
+  box-sizing: border-box;
   width: 100%;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 79px 10px 37px;
+  text-align: center;
 }
 
 .footer__description {
@@ -85,7 +85,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .footer {
     padding: 79px 0 20px;
   }
