--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -35,7 +35,8 @@
 
 .search-form__input {
   margin: 0;
-  padding: 0;
+  padding: 10px 0;
+  min-height: 22px;
   font-family: inherit; 
   font-style: inherit;
   font-weight: 400;
@@ -44,6 +45,11 @@
   border: none;
   background: inherit;
   color: inherit;
+  text-overflow: clip;
+}
+
+.search-form__input:focus {
+  border-bottom: 1px solid #A0A0A0;
 }
 
 .search-form__input:focus-visible {
@@ -59,6 +65,14 @@
   background: url('../../images/find.svg');
   border: none;
   outline: none;
+}
+
+.search-form__button:hover {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.search-form__button:focus {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (min-width: 768px) {
