--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,4 @@
 @import url('./components/Profile/Profile.css');
 @import url('./components/Dialog/Dialog.css');
 @import url('./components/PageNotFound/PageNotFound.css');
+@import url('./components/Popup/Popup.css');
