--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -61,7 +61,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: #000000;
+    background: #FFFFFF;
     border-radius: 50px;
 }
 
@@ -77,12 +77,12 @@
 }
 
 .preloader__round::after {
-    background: #FFFFFF;
+    background: #E8E8E8;
     animation: preloader-inside-white 1s ease-in-out infinite;
 }
 
 .preloader__round::before {
     z-index: 10;
-    background: #000000;
+    background: #FFFFFF;
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
