--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -1,16 +1,18 @@
 .saved-movies {
+  box-sizing: border-box;
+  width: 100%;
   max-width: 1140px;
-  margin: 80px 10px 10px;
+  padding: 80px 10px 10px;
 }
 
 @media screen and (min-width: 768px) {
   .saved-movies {
-    margin: 80px 30px 10px;
+    padding: 80px 30px 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .saved-movies {
-    margin: 70px auto 10px;
+    padding: 70px 0 10px;
   }
 }
