--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -69,11 +69,15 @@
 }
 
 .header__link {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 10px;
   line-height: 16px;
   color: #000000;
   text-decoration: none;
+}
+
+.header__link_type_active {
+  font-weight: 500;
 }
 
 .header__link_type_signin {
