--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -64,6 +64,10 @@
   opacity: .5;
 }
 
+.card__save-btn_active {
+  background-image: url('../../images/save-btn-active.svg');
+}
+
 .card__unsave-btn {
   display: inline-block;
   min-height: 30px;
